src/features/visualization/Visualization.module.css
.viz {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.viz :global(.viz-rootNode) circle {
  fill: transparent;
}

.viz :global(.viz-groupingNode) circle {
  fill: black;
  fill-opacity: 0.2;
  stroke-width: 0px;
}

.viz :global(.viz-unknown) circle {
  fill: red;
  fill-opacity: 0.5;
}

.viz :global(.viz-groupingNode):hover circle {
  stroke: black;
  fill-opacity: 0.1;
}

.viz :global(.viz-unknown):hover circle {
  stroke: rgb(155, 0, 0);
}

.viz :global(.viz-groupingNode) text {
  font-family: monospace;
}

.viz :global(.viz-tooltip) {
  background-color: white;
  border: 1px solid black;
  padding: 1rem;
  white-space: nowrap;
}

.viz :global(.viz-label) {
  text-anchor: middle;
  dominant-baseline: central;
}

.viz :global(.viz-countLabel) {
  text-anchor: middle;
  dominant-baseline: mathematical;
}

